# reseq_interfaces

./: CMakeLists.txt  README.md  package.xml
install/: local_setup.sh  setup.sh
install/reseq_interfaces/share/reseq_interfaces/: package.bash  package.zsh
log/: latest_build
msg/: Detection.msg  EndEffector.msg  Remote.msg
srv/: NodeStatus.srv
